# baires-talent-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/baires_talent_copilot/: __init__.py  auth.py  db.py  main.py  models.py  openai_analysis.py  schemas.py  services.py  settings.py
src/baires_talent_copilot/static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_openai_analysis.py
